# DuDuClaw

./: .dockerignore  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE-REVIEW.md  Cargo.toml  Cross.toml  ISSUES.md  Issues-TODO.md  LICENSE  LICENSING.md  Phase2-TODO.md  README.en.md  README.ja.md  README.md  SECURITY.md  claude_desktop_config.example.json  claw-ecosystem-analysis.md  docker-compose.quickstart.yml  docker-compose.yml  pyproject.toml
crates/duduclaw-agent/: Cargo.toml
crates/duduclaw-agent/src/: account_rotator.rs  budget.rs  contract.rs  heartbeat.rs  ipc.rs  lib.rs  mcp_template.rs  proactive.rs  proactive_timing.rs  prompt_snapshot.rs  registry.rs  reservation.rs  resolver.rs  runner.rs  skill_hub.rs  skill_loader.rs  skill_registry.rs  trust_tier.rs
crates/duduclaw-auth/: Cargo.toml
crates/duduclaw-auth/src/: acl.rs  db.rs  jwt.rs  lib.rs  models.rs  otp.rs
crates/duduclaw-bridge/: Cargo.toml
crates/duduclaw-bridge/src/: lib.rs
crates/duduclaw-cli/: Cargo.toml
crates/duduclaw-cli-runtime/: Cargo.toml
crates/duduclaw-cli-runtime/examples/: bug1_submit_watchdog_spike.rs  claude_interactive_spike.rs  stall_detection_spike.rs
crates/duduclaw-cli-runtime/src/: envelope.rs  error.rs  lib.rs  oneshot.rs  pool.rs  progress.rs  pty.rs  session.rs  supervisor.rs
crates/duduclaw-cli-worker/: Cargo.toml
crates/duduclaw-cli-worker/src/: auth.rs  client.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/duduclaw-cli-worker/tests/: rpc_roundtrip.rs
crates/duduclaw-cli/src/: auth_device.rs  builtin_skills.rs  export_to.rs  lib.rs  license.rs  main.rs  mcp.rs  mcp_auth.rs  mcp_auth_strategy.rs  mcp_capability.rs  mcp_dispatch.rs  mcp_fork.rs  mcp_fork_exec.rs  mcp_headers.rs  mcp_http_auth.rs  mcp_http_errors.rs  mcp_http_server.rs  mcp_memory_handlers.rs  mcp_memory_quota.rs  mcp_namespace.rs  mcp_planner.rs  mcp_rate_limit.rs  mcp_redact.rs  mcp_redaction.rs  mcp_refresh.rs  mcp_sse_store.rs  mcp_wiki.rs  migrate.rs  odoo_pool.rs  portability.rs  premium_templates.rs  proxy.rs  redaction_verify.rs  weekly_report.rs  wiki_scope.rs  wizard.rs
crates/duduclaw-cli/tests/: mcp_http_transport.rs  mcp_integration.rs  privacy_regression_os_native_gate.rs  privacy_regression_perception_neutralize.rs
crates/duduclaw-container/: Cargo.toml
crates/duduclaw-container/src/: apple.rs  docker.rs  lib.rs  lifecycle.rs  sandbox.rs  wsl2.rs
crates/duduclaw-core/: Cargo.toml
crates/duduclaw-core/examples/: self_restart_demo.rs
crates/duduclaw-core/src/: agent_guard.rs  config.rs  cron_tz.rs  department.rs  dispatch_guard.rs  error.rs  fs_lock.rs  keychain.rs  lib.rs  match_utils.rs  platform.rs  sensitivity.rs  text_utils.rs  traits.rs  types.rs
crates/duduclaw-desktop/: Cargo.toml
crates/duduclaw-desktop/src/: activity_monitor.rs  capture.rs  controller.rs  lib.rs
crates/duduclaw-durability/: Cargo.toml
crates/duduclaw-durability/src/: checkpoint.rs  circuit_breaker.rs  dlq.rs  idempotency.rs  lib.rs  retry.rs
crates/duduclaw-fork/: Cargo.toml
crates/duduclaw-fork/src/: branch.rs  budget.rs  error.rs  judge.rs  lib.rs  merge.rs  overlay.rs  store.rs  test_runner.rs
crates/duduclaw-gateway/: Cargo.toml
crates/duduclaw-gateway/src/: a2a_signing.rs  access_control.rs  activation.rs  agent_binding.rs  agent_hook_installer.rs  analytics.rs  approval.rs  audit_export.rs  auth.rs  autopilot_engine.rs  autopilot_store.rs  branding.rs  browser_router.rs  browserbase.rs  budget.rs  canvas.rs  capability.rs  capability_grants.rs  cep_matcher.rs  channel_approval.rs  channel_format.rs  channel_reply.rs  channel_sender.rs  channel_settings.rs  channel_typing.rs  chat_commands.rs  claude_runner.rs  cli_auth.rs  computer_use.rs  computer_use_orchestrator.rs  condition_eval.rs  config_crypto.rs  cost_anomaly.rs  cost_telemetry.rs  credit.rs  cron_scheduler.rs  cron_store.rs  custom_skills.rs  custom_widgets.rs  decision_capture.rs  (+118 more)
crates/duduclaw-gateway/tests/: chat_commands_test.rs  direct_api_test.rs  health_test.rs  license_serve_p2.rs  llm_fallback_test.rs  privacy_regression_proactive_gate.rs  runtime_claude_test.rs  webchat_test.rs  webhook_test.rs
crates/duduclaw-governance/: Cargo.toml
crates/duduclaw-governance/src/: approval.rs  audit.rs  error_codes.rs  evaluator.rs  lib.rs  policy.rs  quota_manager.rs  registry.rs  violation.rs
crates/duduclaw-identity/: Cargo.toml
crates/duduclaw-identity/src/: error.rs  lib.rs  principal.rs  provider.rs
crates/duduclaw-inference/: Cargo.toml
crates/duduclaw-inference/src/: adapter.rs  asr.rs  asr_router.rs  audio_decode.rs  backend.rs  config.rs  deepgram.rs  embedding.rs  engine.rs  error.rs  exo_cluster.rs  hardware.rs  lib.rs  livekit_voice.rs  llama_cpp.rs  llamafile.rs  manager.rs  mistral_rs.rs  mlx_bridge.rs  model_manager.rs  openai_compat.rs  realtime_voice.rs  router.rs  sensevoice.rs  types.rs  util.rs  vad.rs  whisper.rs
crates/duduclaw-inference/tests/: whisper_test.rs
crates/duduclaw-license/: Cargo.toml  features.toml
crates/duduclaw-license/src/: bundle.rs  crl.rs  error.rs  fingerprint.rs  gate.rs  key.rs  lib.rs  license.rs  storage.rs  tier.rs
crates/duduclaw-llm/: Cargo.toml
crates/duduclaw-llm/src/: error.rs  http.rs  lib.rs  mcp_client.rs  moa.rs  models.toml  provenance.rs  provider.rs  registry.rs  router.rs  sse.rs  tool_loop.rs  types.rs
crates/duduclaw-memory/: Cargo.toml
crates/duduclaw-memory/src/: archival_bridge.rs  bench.rs  budget.rs  code_map.rs  consolidation.rs  core_memory.rs  decay.rs  embedding.rs  engine.rs  federated.rs  feedback.rs  (+18 more)
crates/duduclaw-odoo/: Cargo.toml
crates/duduclaw-os/: Cargo.toml
crates/duduclaw-redaction/: Cargo.toml
crates/duduclaw-sandbox/: Cargo.toml
crates/duduclaw-security/: Cargo.toml
src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lifecycle.rs  main.rs  mascot_window.rs  sidecar.rs
tools/license-keygen/: Cargo.toml
(+1274 files in other folders)
