[workspace]
resolver = "2"
exclude = [
    "tools/license-keygen",
    "commercial/duduclaw-license",
]
members = [
    "crates/duduclaw-core",
    "crates/duduclaw-auth",
    "crates/duduclaw-gateway",
    "crates/duduclaw-bus",
    "crates/duduclaw-security",
    "crates/duduclaw-memory",
    "crates/duduclaw-container",
    "crates/duduclaw-agent",
    "crates/duduclaw-bridge",
    "crates/duduclaw-cli",
    "crates/duduclaw-dashboard",
    "crates/duduclaw-odoo",
    "crates/duduclaw-inference",
]

[workspace.package]
version = "1.4.26"
edition = "2024"
license = "Apache-2.0"
authors = ["DuDuClaw Contributors"]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Web
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# Docker
bollard = "0.18"

# Crypto
ring = "0.17"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Streams
futures-util = "0.3"

# HTTP client (shared)
reqwest = { version = "0.12", features = ["json"] }

# Internal crates
duduclaw-core = { path = "crates/duduclaw-core" }
duduclaw-inference = { path = "crates/duduclaw-inference", default-features = false }
duduclaw-gateway = { path = "crates/duduclaw-gateway", default-features = false }
duduclaw-bus = { path = "crates/duduclaw-bus" }
duduclaw-security = { path = "crates/duduclaw-security" }
duduclaw-memory = { path = "crates/duduclaw-memory" }
duduclaw-container = { path = "crates/duduclaw-container" }
duduclaw-agent = { path = "crates/duduclaw-agent" }
duduclaw-bridge = { path = "crates/duduclaw-bridge" }
duduclaw-dashboard = { path = "crates/duduclaw-dashboard" }
duduclaw-auth = { path = "crates/duduclaw-auth" }
duduclaw-odoo = { path = "crates/duduclaw-odoo" }
