[package]
name = "duduclaw-desktop-app"
version = "1.31.0"
description = "DuDuClaw desktop shell (Tauri 2) — wraps the gateway + dashboard in a native window"
edition = "2021"
license = "Apache-2.0"
authors = ["DuDuClaw Contributors"]

# Detached from the Rust workspace on purpose (see root Cargo.toml `exclude`):
# the desktop shell carries heavy GUI deps and its own lockfile.
[workspace]

[lib]
name = "duduclaw_desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# Bundle artifacts use this; keep parity with Tauri's default template.
custom-protocol = ["tauri/custom-protocol"]
