[package]
name = "duduclaw-desktop-app"
version = "1.32.0"
description = "DuDuClaw desktop shell (Tauri 2) — wraps the gateway + dashboard in a native window"
edition = "2021"
license = "Apache-2.0"
authors = ["DuDuClaw Contributors"]

# Detached from the Rust workspace on purpose (see root Cargo.toml `exclude`):
# the desktop shell carries heavy GUI deps and its own lockfile.
[workspace]

# Desktop-only: a plain binary crate (src/main.rs). No `[lib]` — the mobile-ready
# staticlib/cdylib template needs a src/lib.rs we don't ship (iOS/Android are out
# of scope; their generated icons are pruned too).

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Transitive pin (not used directly): time 0.3.52 changed the public
# `Parsable::parse` signature (a breaking change within 0.3.x), which fails to
# compile against cookie 0.18.1 pulled in by tauri/wry. Hold time at 0.3.51 until
# tauri ships a cookie that targets the new API. Remove once that lands.
time = "=0.3.51"

[features]
# Bundle artifacts use this; keep parity with Tauri's default template.
custom-protocol = ["tauri/custom-protocol"]
