[package]
name = "duduclaw-agent"
version.workspace = true
edition.workspace = true

[dependencies]
duduclaw-core = { workspace = true }
duduclaw-memory = { workspace = true }
duduclaw-security = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
ring = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
serde_yaml = "0.9"
zeroize = "1"
tempfile = "3"
chrono-tz = { workspace = true }
