[package]
name = "duduclaw-auth"
version.workspace = true
edition.workspace = true

[dependencies]
duduclaw-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"

# JWT
jsonwebtoken = "9"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
