[package]
name = "duduclaw-bridge"
version.workspace = true
edition.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
duduclaw-core = { workspace = true }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
