[package]
name = "duduclaw-cli-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cross-platform PTY pool for orchestrating CLI-based AI agents (Claude / Codex / Gemini)"

[dependencies]
portable-pty = "0.9"
tokio = { workspace = true }
tokio-util = "0.7"
bytes = "1"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "time"] }
tracing-subscriber = { workspace = true }
dirs = "5"

[lints]
workspace = true
