[package]
name = "duduclaw-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "duduclaw_cli"
path = "src/lib.rs"

[[bin]]
name = "duduclaw"
path = "src/bin/duduclaw.rs"

[dependencies]
duduclaw-core = { workspace = true }
duduclaw-agent = { workspace = true }
duduclaw-container = { workspace = true }
duduclaw-security = { workspace = true }
duduclaw-odoo = { workspace = true }
duduclaw-inference = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
duduclaw-gateway = { workspace = true }
bollard = { workspace = true }
duduclaw-memory = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
chrono = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
urlencoding = "2"
dialoguer = { version = "0.11", features = ["password"] }
console = "0.15"
dirs = "6"
base64 = { workspace = true }
scraper = "0.22"
sha2 = "0.10"
gethostname = "0.5"
mac_address = "1"
hex = "0.4"
rustls = { workspace = true }

[features]
default = []
dashboard = ["duduclaw-gateway/dashboard"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
