[package]
name = "duduclaw-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fs2 = "0.4"

[features]
default = []
# Optional OS keychain storage for the master secret (see src/keychain.rs).
# NOT in default features — keeps the default build free of native credential
# store dependencies. Enable per-platform with `--features keychain`.
keychain = ["dep:keyring"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# `keyring` platform backends are selected per-target so enabling the `keychain`
# feature compiles only the backend that matches the build host.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", optional = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", optional = true, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", optional = true, features = ["sync-secret-service"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Console",
] }

[dev-dependencies]
tempfile = "3"
