[package]
name = "duduclaw-desktop"
version.workspace = true
edition.workspace = true
description = "Native desktop control (mouse, keyboard, screenshot) for DuDuClaw L5b"

[dependencies]
async-trait = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

# Cross-platform input simulation (mouse + keyboard)
enigo = { version = "0.3", features = ["serde"] }

# Screen capture shells out to the OS-native tool (screencapture / PowerShell /
# grim|scrot|maim|import) — see `capture.rs`. This drops the `xcap` crate, whose
# Linux X11/Wayland backends pulled a build-time `quick-xml < 0.41`
# (RUSTSEC-2026-0194/0195). The tools emit PNG directly, so no `image` re-encode.

# Global input event listener (optional — for user activity detection)
rdev = { version = "0.5", optional = true }

[features]
default = []
activity-monitor = ["dep:rdev"]

[dev-dependencies]
tokio = { workspace = true }
