[package]
name = "duduclaw-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
duduclaw-core = { workspace = true }
duduclaw-auth = { workspace = true }
duduclaw-agent = { workspace = true }
duduclaw-memory = { workspace = true }
duduclaw-security = { workspace = true }
duduclaw-container = { workspace = true }
duduclaw-odoo = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
rusqlite = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
base64 = { workspace = true }
ring = { workspace = true }
futures-util = { workspace = true }
tempfile = "3"
zeroize = "1"
unicode-normalization = "0.1"
flate2 = "1"
tar = "0.4"

duduclaw-inference = { workspace = true }
duduclaw-dashboard = { workspace = true, optional = true }
async-trait = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
gethostname = "0.5"
hex = "0.4"
mac_address = "1"
openssl-sys = { version = "0.9", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

# Discord voice channel support (Songbird)
songbird = { version = "0.5", optional = true, features = ["driver", "rustls", "receive"] }

[features]
default = ["dashboard"]
dashboard = ["dep:duduclaw-dashboard"]
vendored-openssl = ["openssl-sys/vendored"]
metal = ["duduclaw-inference/metal"]
cuda = ["duduclaw-inference/cuda"]
vulkan = ["duduclaw-inference/vulkan"]
mistralrs-metal = ["duduclaw-inference/mistralrs-metal"]
mistralrs-cuda = ["duduclaw-inference/mistralrs-cuda"]
discord-voice = ["dep:songbird"]

[dev-dependencies]
tempfile = "3"
